force-app/main/default/objects/Schedule_Decision_Rule__c/Schedule_Decision_Rule__c.object-meta.xml
<CustomObject>
    <label>Schedule Decision Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedule Decision Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>