force-app/main/default/objects/Schedule_Decision_Rule__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <type>TextArea</type>
</CustomField>