force-app/main/default/objects/Schedule_Decision_Rule__c/fields/Favors__c.field-meta.xml
<CustomField>
    <fullName>Favors__c</fullName>
    <description>What a Weight rule favors (e.g. "Minimize drive time").</description>
    <label>Favors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>