force-app/main/default/objects/Schedule_Decision_Rule__c/fields/Human_in_Loop__c.field-meta.xml
<CustomField>
    <fullName>Human_in_Loop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Human in Loop</label>
    <type>Checkbox</type>
</CustomField>