force-app/main/default/objects/Schedule_Decision_Rule__c/fields/Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>Rule_Type__c</fullName>
    <description>Automation = legacy condition/response automation rule (read-only tab). Weight = scoring weight row (active rows must total 100%). Optimization = optimizer constraint with an Active toggle.</description>
    <label>Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automation</fullName>
                <default>true</default>
                <label>Automation</label>
            </value>
            <value>
                <fullName>Weight</fullName>
            </value>
            <value>
                <fullName>Optimization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>