force-app/main/default/objects/Schedule_Decision_Rule__c/fields/Setting__c.field-meta.xml
<CustomField>
    <fullName>Setting__c</fullName>
    <description>The Optimization rule's setting/value (e.g. "Max 8 stops per crew").</description>
    <label>Setting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>