force-app/main/default/objects/Schedule_Decision_Rule__c/fields/System_Response__c.field-meta.xml
<CustomField>
    <fullName>System_Response__c</fullName>
    <label>System Response</label>
    <type>TextArea</type>
</CustomField>