force-app/main/default/objects/Schedule_Decision_Rule__c/fields/Weight_Pct__c.field-meta.xml
<CustomField>
    <fullName>Weight_Pct__c</fullName>
    <description>Scoring weight as a percentage. Active Weight rows must total exactly 100%.</description>
    <label>Weight %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>