force-app/main/default/objects/Schedule_Decision_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Condition__c</columns>
    <columns>Source__c</columns>
    <columns>System_Response__c</columns>
    <columns>Human_in_Loop__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>